console/src/app/maps/map-detail/map-edit/map-design/process-form/process-form.component.scss
@import "~assets/sass/variables";
@import "~assets/sass/base";

.bottom-section {
  @extend .btn-clock-bottom;
}

h3 {
  @extend .pane-header;
  border: none;
}

div {
  button.btn.dropdown-toggle {
    width: 61px;
    height: 21px;
    border-radius: 10.5px;
    background: none;
    border: solid 2px #97999b;
    color: #97999b;
  }
}

.clearfix {
  color: $greyish-text;
  &:hover {
    box-shadow: none;
  }
}

.process-form {
  margin-bottom: 55px;
  .action-form {
    padding-right: 10px;
    padding-left: 10px;
  }
}

